[package]
name = "graph"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
lazy_static = "1.4.0"
clap = { version = "4.3.1", features = ["derive"] }
log4rs = "1.2.0"
log = "0.4.17"
dashmap = "5.5.3"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }

# https://course.rs/cargo/reference/profiles.html
[profile.release]
opt-level = 3
panic = "unwind"