[package]
name = "graph"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fenquen/graph"
keywords = ["graph", "rdbms"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0", features = ["backtrace"] }
lazy_static = "1.4.0"
clap = { version = "4.3.1", features = ["derive"] }
log4rs = "1.3.0"
log = "0.4.21"
dashmap = "5.5.3"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
bytes = "1.6.0"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
futures = { version = "0.3.30", features = ["default"] }
tokio-tungstenite = "0.21.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
rayon = "1.9.0"


# https://course.rs/cargo/reference/profiles.html
[profile.release]
opt-level = 3
panic = "unwind"