[package]
name = "graph"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fenquen/graph"
keywords = ["graph", "rdbms"]
readme = "README.md"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
anyhow = { version = "1.0", features = ["backtrace"] }
lazy_static = "1.5.0"
clap = { version = "4.3.1", features = ["derive"] }
log4rs = "1.3.0"
log = "0.4.21"
dashmap = "6.0.1"
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
bytes = { path = "lib/byte160" }
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
futures = { version = "0.3.30", features = ["default"] }
tokio-tungstenite = "0.23.1"
futures-channel = "0.3.30"
futures-util = "0.3.30"
rayon = "1.10.0"
bumpalo = { version = "3.16.0", features = ["allocator_api", "allocator-api2"] }
graph_independent = { path = "lib/graph_independent" }
hashbrown = { version = "0.14.5", features = ["nightly", "serde"] }
socket2 = "0.5.7"
openraft = { version = "0.9.13", features = ["bt", "serde", "storage-v2"] }
#enum-ordinalize = "4.3.0"

# https://course.rs/cargo/reference/profiles.html
[profile.release]
opt-level = 3
panic = "unwind"